--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -1,130 +1,81 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5CF-jW-e0L">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="lJg-FH-Cn0">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
-        <scene sceneID="EEE-t9-Dhq">
+        <!--Item-->
+        <scene sceneID="qRV-im-2uw">
             <objects>
-                <tabBarController id="5CF-jW-e0L" customClass="TabBarController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="Mgy-iv-62u">
-                        <nil key="title"/>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="aqz-vd-hui">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <outlet property="segmentedControl" destination="hFq-le-B8w" id="gdB-h6-CEe"/>
-                        <segue destination="RTZ-Tc-s0s" kind="relationship" relationship="viewControllers" id="2Yj-bf-Jeu"/>
-                        <segue destination="RTZ-Tc-s0s" kind="relationship" relationship="viewControllers" id="T75-O1-S48"/>
-                        <segue destination="RTZ-Tc-s0s" kind="relationship" relationship="viewControllers" id="IT1-Gv-gxx"/>
-                        <segue destination="cGn-vX-Fb2" kind="relationship" relationship="viewControllers" id="ANv-33-P5W"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SFC-67-jJb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="hFq-le-B8w">
-                    <rect key="frame" x="0.0" y="0.0" width="139" height="29"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <segments>
-                        <segment title="VDub"/>
-                        <segment title="Ratty"/>
-                    </segments>
-                    <connections>
-                        <action selector="diningHallChange:" destination="5CF-jW-e0L" eventType="valueChanged" id="OGL-9R-3cI"/>
-                    </connections>
-                </segmentedControl>
-            </objects>
-            <point key="canvasLocation" x="-1622.9333333333334" y="301.04000000000002"/>
-        </scene>
-        <!--Breakfast-->
-        <scene sceneID="Gh3-DX-1Us">
-            <objects>
-                <tableViewController title="Breakfast" id="5nE-js-Plx" customClass="MealTableViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="0uN-UL-SMl">
+                <viewController id="lJg-FH-Cn0" customClass="MealViewController" customModule="VdubApp" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yzF-Lh-V8F"/>
+                        <viewControllerLayoutGuide type="bottom" id="xVm-CH-uAo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cMZ-ls-Uh2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AvU-dS-kIh">
-                            <rect key="frame" x="0.0" y="64" width="320" height="23"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" red="0.33725490196078434" green="0.24705882352941178" blue="0.23529411764705882" alpha="1" colorSpace="calibratedRGB"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </label>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" id="9pg-Na-8M1">
-                                <rect key="frame" x="0.0" y="115" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9pg-Na-8M1" id="MLE-wS-qEp">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jsf-0h-ICN">
-                                            <rect key="frame" x="8" y="6" width="584" height="32"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="5nE-js-Plx" id="81y-ky-MFf"/>
-                            <outlet property="delegate" destination="5nE-js-Plx" id="t5H-Iq-gdD"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Breakfast" image="breakfast" id="iYL-YF-WyX"/>
-                    <navigationItem key="navigationItem" id="y2J-yr-YCQ">
-                        <barButtonItem key="leftBarButtonItem" image="back" id="m8A-iM-mXy">
-                            <connections>
-                                <action selector="dayBack:" destination="5nE-js-Plx" id="pGn-hw-42A"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="forward" id="HMT-l4-4y4">
-                            <connections>
-                                <action selector="dayForward:" destination="5nE-js-Plx" id="qGx-gS-Sgv"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2RD-eW-LYD">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <items>
+                                    <navigationItem title="Breakfast" id="NBf-nG-yYy">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="xYG-Nf-o2v"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="Mio-QY-vBO"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" restorationIdentifier="12" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="odZ-aZ-N9g">
+                                <rect key="frame" x="112" y="64" width="97" height="29"/>
+                                <segments>
+                                    <segment title="VDub"/>
+                                    <segment title="Ratty"/>
+                                </segments>
+                            </segmentedControl>
+                            <tabBar contentMode="scaleToFill" restorationIdentifier="14" translatesAutoresizingMaskIntoConstraints="NO" id="xOT-1H-NiU">
+                                <rect key="frame" x="0.0" y="519" width="320" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <tabBarItem title="Item" id="Ihq-aq-147"/>
+                                    <tabBarItem title="Item" id="yms-wA-9Vz"/>
+                                    <tabBarItem title="Item" id="WiV-qX-HqB"/>
+                                    <tabBarItem systemItem="more" id="i9G-44-SwF"/>
+                                </items>
+                            </tabBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HZt-BU-umx">
+                                <rect key="frame" x="0.0" y="100" width="320" height="419"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="HZt-BU-umx" firstAttribute="trailing" secondItem="xOT-1H-NiU" secondAttribute="trailing" id="6X2-do-Luy"/>
+                            <constraint firstItem="2RD-eW-LYD" firstAttribute="top" secondItem="yzF-Lh-V8F" secondAttribute="bottom" id="88p-w7-mbM"/>
+                            <constraint firstItem="HZt-BU-umx" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="Iyu-FB-JMS"/>
+                            <constraint firstItem="2RD-eW-LYD" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="Kay-rx-YHb"/>
+                            <constraint firstItem="xVm-CH-uAo" firstAttribute="top" secondItem="xOT-1H-NiU" secondAttribute="bottom" id="Mk8-nD-iW6"/>
+                            <constraint firstItem="odZ-aZ-N9g" firstAttribute="centerX" secondItem="cMZ-ls-Uh2" secondAttribute="centerX" id="RFG-gy-5Bu"/>
+                            <constraint firstItem="HZt-BU-umx" firstAttribute="leading" secondItem="xOT-1H-NiU" secondAttribute="leading" id="UDF-tp-Pnm"/>
+                            <constraint firstItem="xOT-1H-NiU" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="WdQ-CW-Cqb"/>
+                            <constraint firstItem="xOT-1H-NiU" firstAttribute="centerX" secondItem="cMZ-ls-Uh2" secondAttribute="centerX" id="p1G-uS-VKK"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="ehu-qB-Anx"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
-                        <outlet property="backButton" destination="m8A-iM-mXy" id="pl9-5K-zQR"/>
-                        <outlet property="dateLabel" destination="AvU-dS-kIh" id="dkk-nc-nAa"/>
-                        <outlet property="forwardButton" destination="HMT-l4-4y4" id="YAJ-Ep-RRB"/>
+                        <outlet property="segmentedControl" destination="odZ-aZ-N9g" id="JKe-1j-KJ6"/>
+                        <outlet property="tabBar" destination="xOT-1H-NiU" id="joa-RB-ksn"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="On2-wK-ptS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ngu-Fo-c8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-739" y="301"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="Ns0-dI-jI5">
-            <objects>
-                <navigationController id="RTZ-Tc-s0s" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Wy7-Q5-e17"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lHz-V2-2Qy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="5nE-js-Plx" kind="relationship" relationship="rootViewController" id="2D2-cp-TqW"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rtg-2k-xpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1145" y="374"/>
+            <point key="canvasLocation" x="-1533" y="508"/>
         </scene>
         <!--Extras-->
         <scene sceneID="WBP-Sa-8zQ">
             <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="pNi-aG-Jck" customClass="ExtrasTableViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="pNi-aG-Jck" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="aHB-iW-trq">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -215,7 +166,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="c3J-TF-8Im">
-                                <rect key="frame" x="0.0" y="122" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c3J-TF-8Im" id="C6p-Go-bdh">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -228,7 +179,7 @@
                             <outlet property="delegate" destination="SOV-pi-Ck6" id="sZw-wr-idr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Notifications" prompt="COMING SOON!!" id="ZsB-uj-Wvv">
+                    <navigationItem key="navigationItem" title="Notifications" prompt="" id="ZsB-uj-Wvv">
                         <barButtonItem key="backBarButtonItem" title="Back" id="zOG-e8-JPj"/>
                     </navigationItem>
                 </tableViewController>
@@ -386,13 +337,7 @@ made with </string>
         </scene>
     </scenes>
     <resources>
-        <image name="back" width="25" height="25"/>
-        <image name="breakfast" width="25" height="25"/>
-        <image name="forward" width="25" height="25"/>
         <image name="more" width="24" height="24"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="T75-O1-S48"/>
-    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
