--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -14,56 +14,82 @@
                         <viewControllerLayoutGuide type="top" id="yzF-Lh-V8F"/>
                         <viewControllerLayoutGuide type="bottom" id="xVm-CH-uAo"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="cMZ-ls-Uh2">
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="cMZ-ls-Uh2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2RD-eW-LYD">
+                            <navigationBar autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2RD-eW-LYD">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="YwM-Fh-mi4"/>
+                                </constraints>
+                                <color key="barTintColor" red="0.37647058820000001" green="0.2901960784" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <navigationItem title="Breakfast" id="NBf-nG-yYy">
-                                        <barButtonItem key="leftBarButtonItem" title="Item" id="xYG-Nf-o2v"/>
-                                        <barButtonItem key="rightBarButtonItem" title="Item" id="Mio-QY-vBO"/>
+                                    <navigationItem title="Monday" id="NBf-nG-yYy">
+                                        <barButtonItem key="leftBarButtonItem" image="back" id="xYG-Nf-o2v">
+                                            <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" image="forward" id="Mio-QY-vBO">
+                                            <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" restorationIdentifier="12" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="odZ-aZ-N9g">
-                                <rect key="frame" x="112" y="64" width="97" height="29"/>
-                                <segments>
-                                    <segment title="VDub"/>
-                                    <segment title="Ratty"/>
-                                </segments>
-                            </segmentedControl>
-                            <tabBar contentMode="scaleToFill" restorationIdentifier="14" translatesAutoresizingMaskIntoConstraints="NO" id="xOT-1H-NiU">
+                            <tabBar contentMode="scaleToFill" restorationIdentifier="14" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xOT-1H-NiU">
                                 <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="WBK-eQ-fVg"/>
+                                </constraints>
                                 <items>
                                     <tabBarItem title="Item" id="Ihq-aq-147"/>
                                     <tabBarItem title="Item" id="yms-wA-9Vz"/>
                                     <tabBarItem title="Item" id="WiV-qX-HqB"/>
                                     <tabBarItem systemItem="more" id="i9G-44-SwF"/>
                                 </items>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="0.37647058820000001" green="0.2901960784" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="selectedImageTintColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                             </tabBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HZt-BU-umx">
-                                <rect key="frame" x="0.0" y="100" width="320" height="419"/>
+                                <rect key="frame" x="0.0" y="519" width="320" height="0.0"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" restorationIdentifier="12" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="odZ-aZ-N9g">
+                                <rect key="frame" x="51" y="64" width="218" height="29"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="218" id="BPO-Da-Exe"/>
+                                    <constraint firstAttribute="height" constant="28" id="Qad-sK-8lE"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="VDub"/>
+                                    <segment title="Ratty"/>
+                                    <segment title="Andrews"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
+                        <color key="backgroundColor" red="0.37647058823529411" green="0.29019607843137252" blue="0.28235294117647058" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="HZt-BU-umx" firstAttribute="trailing" secondItem="xOT-1H-NiU" secondAttribute="trailing" id="6X2-do-Luy"/>
                             <constraint firstItem="2RD-eW-LYD" firstAttribute="top" secondItem="yzF-Lh-V8F" secondAttribute="bottom" id="88p-w7-mbM"/>
+                            <constraint firstItem="2RD-eW-LYD" firstAttribute="top" secondItem="yzF-Lh-V8F" secondAttribute="bottom" id="Asp-zq-5lA"/>
+                            <constraint firstItem="HZt-BU-umx" firstAttribute="top" secondItem="odZ-aZ-N9g" secondAttribute="bottom" constant="1" id="Goh-yV-TvJ"/>
                             <constraint firstItem="HZt-BU-umx" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="Iyu-FB-JMS"/>
                             <constraint firstItem="2RD-eW-LYD" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="Kay-rx-YHb"/>
                             <constraint firstItem="xVm-CH-uAo" firstAttribute="top" secondItem="xOT-1H-NiU" secondAttribute="bottom" id="Mk8-nD-iW6"/>
                             <constraint firstItem="odZ-aZ-N9g" firstAttribute="centerX" secondItem="cMZ-ls-Uh2" secondAttribute="centerX" id="RFG-gy-5Bu"/>
-                            <constraint firstItem="HZt-BU-umx" firstAttribute="leading" secondItem="xOT-1H-NiU" secondAttribute="leading" id="UDF-tp-Pnm"/>
                             <constraint firstItem="xOT-1H-NiU" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="WdQ-CW-Cqb"/>
+                            <constraint firstItem="xOT-1H-NiU" firstAttribute="top" secondItem="HZt-BU-umx" secondAttribute="bottom" id="ehE-uf-oi4"/>
+                            <constraint firstItem="odZ-aZ-N9g" firstAttribute="top" secondItem="2RD-eW-LYD" secondAttribute="bottom" id="ikh-KP-P42"/>
                             <constraint firstItem="xOT-1H-NiU" firstAttribute="centerX" secondItem="cMZ-ls-Uh2" secondAttribute="centerX" id="p1G-uS-VKK"/>
+                            <constraint firstItem="xOT-1H-NiU" firstAttribute="top" secondItem="HZt-BU-umx" secondAttribute="bottom" id="r5o-ZX-84y"/>
+                            <constraint firstItem="2RD-eW-LYD" firstAttribute="centerX" secondItem="cMZ-ls-Uh2" secondAttribute="centerX" id="w6i-hA-ZVU"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="ehu-qB-Anx"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
+                        <outlet property="navBar" destination="2RD-eW-LYD" id="grF-j2-NJZ"/>
                         <outlet property="segmentedControl" destination="odZ-aZ-N9g" id="JKe-1j-KJ6"/>
                         <outlet property="tabBar" destination="xOT-1H-NiU" id="joa-RB-ksn"/>
                     </connections>
@@ -337,6 +363,8 @@ made with </string>
         </scene>
     </scenes>
     <resources>
+        <image name="back" width="24" height="24"/>
+        <image name="forward" width="24" height="24"/>
         <image name="more" width="24" height="24"/>
     </resources>
     <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
