--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -28,9 +28,15 @@
                                     <navigationItem title="Monday" id="NBf-nG-yYy">
                                         <barButtonItem key="leftBarButtonItem" image="back" id="xYG-Nf-o2v">
                                             <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="back:" destination="lJg-FH-Cn0" id="Fap-ET-zoc"/>
+                                            </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" image="forward" id="Mio-QY-vBO">
                                             <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="forward:" destination="lJg-FH-Cn0" id="UrC-ot-oPd"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -50,9 +56,14 @@
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="barTintColor" red="0.37647058820000001" green="0.2901960784" blue="0.28235294119999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="selectedImageTintColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="0.72987607758620687" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </tabBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HZt-BU-umx">
-                                <rect key="frame" x="0.0" y="519" width="320" height="0.0"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="reuseIdentifier" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HZt-BU-umx">
+                                <rect key="frame" x="0.0" y="93" width="320" height="426"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" restorationIdentifier="12" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="odZ-aZ-N9g">
@@ -67,12 +78,16 @@
                                     <segment title="Ratty"/>
                                     <segment title="Andrews"/>
                                 </segments>
+                                <connections>
+                                    <action selector="hallChange:" destination="lJg-FH-Cn0" eventType="valueChanged" id="tFq-Jp-PoM"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" red="0.37647058823529411" green="0.29019607843137252" blue="0.28235294117647058" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="2RD-eW-LYD" firstAttribute="top" secondItem="yzF-Lh-V8F" secondAttribute="bottom" id="88p-w7-mbM"/>
                             <constraint firstItem="2RD-eW-LYD" firstAttribute="top" secondItem="yzF-Lh-V8F" secondAttribute="bottom" id="Asp-zq-5lA"/>
+                            <constraint firstItem="HZt-BU-umx" firstAttribute="centerX" secondItem="cMZ-ls-Uh2" secondAttribute="centerX" id="CgG-Gs-PyO"/>
                             <constraint firstItem="HZt-BU-umx" firstAttribute="top" secondItem="odZ-aZ-N9g" secondAttribute="bottom" constant="1" id="Goh-yV-TvJ"/>
                             <constraint firstItem="HZt-BU-umx" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="Iyu-FB-JMS"/>
                             <constraint firstItem="2RD-eW-LYD" firstAttribute="width" secondItem="cMZ-ls-Uh2" secondAttribute="width" id="Kay-rx-YHb"/>
@@ -89,9 +104,12 @@
                     <tabBarItem key="tabBarItem" title="Item" id="ehu-qB-Anx"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
+                        <outlet property="backButton" destination="xYG-Nf-o2v" id="UQt-rI-jXr"/>
+                        <outlet property="forwardButton" destination="Mio-QY-vBO" id="qre-Ev-AlP"/>
                         <outlet property="navBar" destination="2RD-eW-LYD" id="grF-j2-NJZ"/>
                         <outlet property="segmentedControl" destination="odZ-aZ-N9g" id="JKe-1j-KJ6"/>
                         <outlet property="tabBar" destination="xOT-1H-NiU" id="joa-RB-ksn"/>
+                        <outlet property="tableView" destination="HZt-BU-umx" id="EeC-Ar-W4q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ngu-Fo-c8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -347,7 +365,7 @@ made with </string>
         <!--More-->
         <scene sceneID="hBq-fw-dKw">
             <objects>
-                <navigationController storyboardIdentifier="55" title="More" id="cGn-vX-Fb2" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MoreInfo" title="More" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cGn-vX-Fb2" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="More" image="more" id="m1Z-Kn-czn"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2rS-kg-GLU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
