--- a/VdubApp/Base.lproj/LaunchScreen.storyboard
+++ b/VdubApp/Base.lproj/LaunchScreen.storyboard
@@ -45,6 +45,7 @@
                             <constraint firstItem="aSG-c6-cha" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="rCX-QI-Arf"/>
                         </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
