fixed transitions, finally

--- a/VdubApp/Base.lproj/Main.storyboard
+++ b/VdubApp/Base.lproj/Main.storyboard
@@ -9,7 +9,6 @@
         <!--Item-->
         <scene sceneID="qRV-im-2uw">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ngu-Fo-c8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="lJg-FH-Cn0" customClass="MealViewController" customModule="VdubApp" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yzF-Lh-V8F"/>
@@ -114,14 +113,14 @@
                         <outlet property="tableView" destination="HZt-BU-umx" id="EeC-Ar-W4q"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ngu-Fo-c8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1533" y="508"/>
         </scene>
         <!--Extras-->
         <scene sceneID="WBP-Sa-8zQ">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LIN-61-4ao" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="pNi-aG-Jck" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="pNi-aG-Jck" customClass="ExtrasTableViewController" customModule="VdubApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="aHB-iW-trq">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -196,13 +195,14 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Extras" id="zHm-CI-iNr">
                         <barButtonItem key="backBarButtonItem" title="Back" id="RCC-1y-j3N"/>
-                        <barButtonItem key="leftBarButtonItem" image="back" id="yTf-vP-jJS">
+                        <barButtonItem key="leftBarButtonItem" image="down4" id="yTf-vP-jJS">
                             <connections>
-                                <segue destination="lJg-FH-Cn0" kind="modal" modalPresentationStyle="currentContext" modalTransitionStyle="coverVertical" id="9ou-pY-MmK"/>
+                                <action selector="returnToMenu:" destination="pNi-aG-Jck" id="K6O-c7-obW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LIN-61-4ao" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1048" y="1298"/>
         </scene>
@@ -227,7 +227,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Coming soon!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BIb-Bk-GEm">
                                                     <rect key="frame" x="8" y="11" width="106" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -573,6 +573,7 @@ made with </string>
     </scenes>
     <resources>
         <image name="back" width="25" height="25"/>
+        <image name="down4" width="25" height="25"/>
         <image name="forward" width="25" height="25"/>
     </resources>
     <color key="tintColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
