--- a/VdubApp/TableViewCell.xib
+++ b/VdubApp/TableViewCell.xib
@@ -8,57 +8,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" selectionStyle="default" indentationWidth="10" translatesAutoresizingMaskIntoConstraints="NO" id="Q3V-Uy-gpl" customClass="TableViewCell" customModule="VdubApp" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                    <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q3V-Uy-gpl" id="ktX-Ir-e90">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MsY-xa-pTh">
-                                <rect key="frame" x="8" y="11" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="juR-xT-xtC">
-                                <rect key="frame" x="546" y="7" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ng5-ue-pGN">
-                                <rect key="frame" x="496" y="11" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="Ng5-ue-pGN" firstAttribute="centerY" secondItem="ktX-Ir-e90" secondAttribute="centerY" id="3f9-du-dJJ"/>
-                            <constraint firstItem="MsY-xa-pTh" firstAttribute="centerY" secondItem="ktX-Ir-e90" secondAttribute="centerY" id="625-CP-QyS"/>
-                            <constraint firstItem="juR-xT-xtC" firstAttribute="centerY" secondItem="ktX-Ir-e90" secondAttribute="centerY" id="7fm-9P-2RX"/>
-                            <constraint firstItem="juR-xT-xtC" firstAttribute="trailing" secondItem="ktX-Ir-e90" secondAttribute="trailingMargin" id="EsS-PX-UZm"/>
-                            <constraint firstItem="MsY-xa-pTh" firstAttribute="leading" secondItem="ktX-Ir-e90" secondAttribute="leadingMargin" id="YY0-7W-WuP"/>
-                            <constraint firstItem="juR-xT-xtC" firstAttribute="leading" secondItem="Ng5-ue-pGN" secondAttribute="trailing" constant="8" id="c3P-Ci-cKo"/>
-                        </constraints>
-                    </tableViewCellContentView>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="NhM-5y-pOM"/>
-                    </constraints>
-                    <connections>
-                        <outlet property="amount" destination="Ng5-ue-pGN" id="com-am-6Uq"/>
-                        <outlet property="food" destination="MsY-xa-pTh" id="JXX-2z-az1"/>
-                        <outlet property="star" destination="juR-xT-xtC" id="ssr-AZ-sQU"/>
-                    </connections>
-                </tableViewCell>
-            </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="aiy-cF-LzC" customClass="TableViewCell" customModule="VdubApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aiy-cF-LzC" id="Q4o-Vu-3bs">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yfh-BC-c1o">
+                        <rect key="frame" x="299" y="11" width="13" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.70747373952558368" green="0.71989515078868727" blue="0.77777502825897438" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drU-By-S0y">
+                        <rect key="frame" x="8" y="11" width="270" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="drU-By-S0y" firstAttribute="leading" secondItem="Q4o-Vu-3bs" secondAttribute="leadingMargin" id="1ug-Wz-GOd"/>
+                    <constraint firstItem="Yfh-BC-c1o" firstAttribute="trailing" secondItem="Q4o-Vu-3bs" secondAttribute="trailingMargin" id="5bR-ig-0rg"/>
+                    <constraint firstItem="Yfh-BC-c1o" firstAttribute="centerY" secondItem="Q4o-Vu-3bs" secondAttribute="centerY" id="Gsw-dA-0vL"/>
+                    <constraint firstItem="drU-By-S0y" firstAttribute="centerY" secondItem="Q4o-Vu-3bs" secondAttribute="centerY" id="POg-8Q-Zh9"/>
+                    <constraint firstItem="Yfh-BC-c1o" firstAttribute="leading" secondItem="drU-By-S0y" secondAttribute="trailing" constant="10" id="xNv-L0-fBt"/>
+                </constraints>
+            </tableViewCellContentView>
             <constraints>
-                <constraint firstItem="Q3V-Uy-gpl" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" id="amz-vR-UQe"/>
+                <constraint firstItem="drU-By-S0y" firstAttribute="width" relation="lessThanOrEqual" secondItem="aiy-cF-LzC" secondAttribute="width" constant="-60" id="9ph-E7-k70"/>
             </constraints>
-            <point key="canvasLocation" x="444" y="210"/>
-        </view>
+            <connections>
+                <outlet property="amount" destination="Yfh-BC-c1o" id="mdk-y8-qYh"/>
+                <outlet property="food" destination="drU-By-S0y" id="Etg-5v-jQG"/>
+            </connections>
+            <point key="canvasLocation" x="419" y="75"/>
+        </tableViewCell>
     </objects>
 </document>
